[workspace]
resolver = "2"
members = [
    "crates/wireguard-netstack",
    "crates/wireguard-hyper-connector",
    "crates/warp-wireguard-gen",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Lorenzo Rizzotti <dev@dreaming.codes>"]
repository = "https://github.com/Dreaming-Codes/wireguard-hyper-connector"

[workspace.dependencies]
# Shared dependencies with consistent versions
tokio = { version = "1", features = ["full"] }
bytes = "1"
log = "0.4"
thiserror = "2"
parking_lot = "0.12"
rand = "0.8"
base64 = "0.22"

# TLS
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "1.0"

# HTTP
reqwest = { version = "0.12", default-features = false }

# reqwest with custom-hyper-connector support (will be merged upstream)
reqwest-wg = { git = "https://github.com/Dreaming-Codes/reqwest", branch = "custom-hyper-connector", package = "reqwest", default-features = false, features = ["custom-hyper-connector", "rustls-tls"] }

# Crypto
x25519-dalek = { version = "2", features = ["static_secrets"] }

# Time
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Local crates
wireguard-netstack = { version = "0.1.0", path = "crates/wireguard-netstack" }
warp-wireguard-gen = { version = "0.1.1", path = "crates/warp-wireguard-gen" }
