[package]
name = "warp-wireguard-gen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Generate WireGuard configs by registering with Cloudflare WARP"
keywords = ["wireguard", "warp", "cloudflare", "vpn", "tunnel"]
categories = ["network-programming", "asynchronous"]

[features]
default = []
# Enable serde support for WarpCredentials persistence
serde = ["dep:serde_json"]

[dependencies]
# HTTP client - rustls with TLS 1.2 support
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
rustls.workspace = true
webpki-roots.workspace = true

# Crypto
x25519-dalek.workspace = true
rand.workspace = true
base64.workspace = true

# Error handling
thiserror.workspace = true

# Async
tokio.workspace = true

# Logging
log.workspace = true

# Time formatting for TOS timestamp
chrono.workspace = true

# Serialization - always needed for API types, optional serde_json for credentials persistence
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }

# Local crates
wireguard-netstack.workspace = true
