[package]
name = "wireguard-netstack"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Userspace WireGuard tunnel with TCP/IP network stack"
keywords = ["wireguard", "vpn", "tunnel", "networking", "tcp"]
categories = ["network-programming", "asynchronous"]

[dependencies]
# WireGuard implementation
gotatun = "0.1.2"

# Userspace TCP/IP stack
smoltcp = { version = "0.12", default-features = false, features = [
    "medium-ip",
    "proto-ipv4",
    "socket-tcp",
    "std",
    "log",
] }

# Async runtime
tokio.workspace = true

# TLS (for DoH)
tokio-rustls.workspace = true
rustls.workspace = true
webpki-roots.workspace = true

# Error handling
thiserror.workspace = true

# Utilities
bytes.workspace = true
parking_lot.workspace = true
rand.workspace = true
base64.workspace = true
log.workspace = true

# Config parsing
serde = { version = "1", features = ["derive"] }
serde_ini = "0.2"

# IP address handling
ipnet = "2"

# Socket options
socket2 = "0.6"

# For zerocopy traits
zerocopy = "0.8"
